--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,15 @@
 {
-  "name": "PWA App",
-  "short_name": "App",
+  "name": "Next PWA demo",
+  "short_name": "Next PWA",
   "icons": [
     {
-      "src": "/icons/android-chrome-192x192.png",
+      "src": "/icon.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/android-chrome-384x384.png",
-      "sizes": "384x384",
       "type": "image/png"
     },
+
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
