--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "next": "12.1.4",
     "next-pwa": "^5.4.7",
     "react": "18.0.0",
